
# By: Muthanna A. Attyah 2017
#

cmake_minimum_required(VERSION 3.5)

project(gtk)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)

INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})
ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})


ADD_EXECUTABLE(win      src/win.cpp)
ADD_EXECUTABLE(button   src/button.cpp)
ADD_EXECUTABLE(label    src/label.cpp)

TARGET_LINK_LIBRARIES(win       ${GTK3_LIBRARIES})
TARGET_LINK_LIBRARIES(button    ${GTK3_LIBRARIES})
TARGET_LINK_LIBRARIES(label     ${GTK3_LIBRARIES})
